fixing alignment for delete button

--- a/app/assets/stylesheets/vines.css.scss
+++ b/app/assets/stylesheets/vines.css.scss
@@ -13,6 +13,6 @@ video {
 }
 
 .clips video {
-  width: 270px;
+  width: 275px;
   height: 284px;
 }
